Fixed letter text alignment and image size

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
 .letter {
     position: absolute;
     width: 300px;
-    height: 180px;
+    height: 300px;
     background-color: #fff3e0;
     top: 70px; /* Moves it lower inside the envelope */
     left: 15px;
